[package]
name = "embedded-threads"
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex-m specifics
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.6.0", features = ["exit"] }

riot-rs-runqueue = "0.1.*"

[profile.release]
debug=true

[patch.crates-io]
riot-rs-runqueue = { git = "https://github.com/future-proof-iot/riot-rs-runqueue", branch = "main" }
