[package]
name = "embedded-threads"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "generic embedded scheduler & IPC"

[dependencies]
# cortex-m specifics
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.6.0", features = ["exit"] }

riot-rs-runqueue = "0.1.*"
